src/snapshots/p5__layout__tests__layout_complete_update.snap
---
source: src/layout.rs
expression: terminal.backend()
---
"╭Workspaces──────────────────╮╭No Workspace Loaded─────────────────────────────────────────────────────────────────────╮"
"│test-workspace              ││Stack: test-stack                                                                       │"
"│                            │╰────────────────────────────────────────────────────────────────────────────────────────╯"
"│                            │╭Update - Complete───────────────────────────────────────────────────────────────────────╮"
"│                            ││Same      2s pulumi:pulumi:Stack            debug-base-reference                        │"
"│                            ││Create    0s local:index/file:File          new                                         │"
"│                            ││Same      0s local:index/file:File          file                                        │"
"│                            ││Read      0s pulumi:pulumi:StackReference   current                                     │"
"│                            ││Update    2s command:local:Command          sleep                                       │"
"│                            ││Replace   0s local:index/file:File          iteration                                   │"
"│                            ││Replace   0s random:index/randomPassword:RandomPassword password                        │"
"│                            ││Replace   0s local:index/file:File          secret                                      │"
"│                            ││Replace   0s local:index/file:File          file-from-command                           │"
"│                            ││Delete    0s local:index/file:File          delete                                      │"
"│                            ││Discard   0s pulumi:pulumi:StackReference   removed-reference                           │"
"│                            ││Delete    0s local:index/file:File          discard                                     │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"╰────────────────────────────╯│                                                                                        │"
"╭Stacks──────────────────────╮│                                                                                        │"
"│test-stack                  ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            │╰────────────────────────────────────────────────────────────────────────────────────────╯"
"│                            │╭Preview - Summary───────────────────────────────────────────────────────────────────────╮"
"│                            ││Same      pulumi:pulumi:Stack            debug-base-reference                           │"
"│                            ││Create    local:index/file:File          new                                            │"
"│                            │╰────────────────────────────────────────────────────────────────────────────────────────╯"
"╰────────────────────────────╯                                                                                          "
