src/snapshots/p5__layout__tests__layout_operation_details_with_selection.snap
---
source: src/layout.rs
expression: terminal.backend()
---
"╭Workspaces──────────────────╮╭No Workspace Loaded─────────────────────────────────────────────────────────────────────╮"
"│test-workspace              ││Stack: test-stack                                                                       │"
"│                            │╰────────────────────────────────────────────────────────────────────────────────────────╯"
"│                            │╭Update - Complete──────────────────────────╮╭Operation Details─Operation Details────────╮"
"│                            ││Same      2s pulumi:pulumi:Stack           ││URN: urn:pulumi:base-reference::debug::loca│"
"│                            ││Create    0s local:index/file:File         ││Operation: Same                            │"
"│                            ││Same      0s local:index/file:File         ││Status: Completed                          │"
"│                            ││Read      0s pulumi:pulumi:StackReference  ││Resource Type: Other("local:index/file:File│"
"│                            ││Update    2s command:local:Command         ││: ── Detailed Changes ──                   │"
"│                            ││Replace   0s local:index/file:File         ││                                           │"
"│                            ││Replace   0s random:index/randomPassword:Ra││                                           │"
"│                            ││Replace   0s local:index/file:File         ││                                           │"
"│                            ││Replace   0s local:index/file:File         ││                                           │"
"│                            ││Delete    0s local:index/file:File         ││                                           │"
"│                            ││Discard   0s pulumi:pulumi:StackReference  ││                                           │"
"│                            ││Delete    0s local:index/file:File         ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"╰────────────────────────────╯│                                           ││                                           │"
"╭Stacks──────────────────────╮│                                           ││                                           │"
"│test-stack                  ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            │╰───────────────────────────────────────────╯│                                           │"
"│                            │╭Preview - Summary──────────────────────────╮│                                           │"
"│                            ││Create    local:index/file:File          ne││                                           │"
"│                            ││Import    random:index/randomString:RandomS││                                           │"
"│                            │╰───────────────────────────────────────────╯╰───────────────────────────────────────────╯"
"╰────────────────────────────╯                                                                                          "
