src/snapshots/p5__layout__tests__layout_operation_item_view.snap
---
source: src/layout.rs
expression: terminal.backend()
---
"╭Workspaces──────────────────╮╭No Workspace Loaded─────────────────────────────────────────────────────────────────────╮"
"│test-workspace              ││Stack: test-stack                                                                       │"
"│                            │╰────────────────────────────────────────────────────────────────────────────────────────╯"
"│                            │╭Update - Complete──────────────────────────╮╭Operation Details─Operation Details────────╮"
"│                            ││Same      2s pulumi:pulumi:Stack           ││info: No operation selected                │"
"│                            ││Create    0s local:index/file:File         ││                                           │"
"│                            ││Same      0s local:index/file:File         ││                                           │"
"│                            ││Read      0s pulumi:pulumi:StackReference  ││                                           │"
"│                            ││Update    2s command:local:Command         ││                                           │"
"│                            ││Replace   0s local:index/file:File         ││                                           │"
"│                            ││Replace   0s random:index/randomPassword:Ra││                                           │"
"│                            ││Replace   0s local:index/file:File         ││                                           │"
"│                            ││Replace   0s local:index/file:File         ││                                           │"
"│                            ││Delete    0s local:index/file:File         ││                                           │"
"│                            ││Discard   0s pulumi:pulumi:StackReference  ││                                           │"
"│                            ││Delete    0s local:index/file:File         ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"╰────────────────────────────╯│                                           ││                                           │"
"╭Stacks──────────────────────╮│                                           ││                                           │"
"│test-stack                  ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            │╰───────────────────────────────────────────╯│                                           │"
"│                            │╭Preview - Summary──────────────────────────╮│                                           │"
"│                            ││Same      pulumi:pulumi:Stack            de││                                           │"
"│                            ││Create    local:index/file:File          ne││                                           │"
"│                            │╰───────────────────────────────────────────╯╰───────────────────────────────────────────╯"
"╰────────────────────────────╯                                                                                          "
