src/snapshots/p5__layout__tests__layout_summary_details_view.snap
---
source: src/layout.rs
expression: terminal.backend()
---
"╭Workspaces──────────────────╮╭No Workspace Loaded─────────────────────────────────────────────────────────────────────╮"
"│test-workspace              ││Stack: test-stack                                                                       │"
"│                            │╰────────────────────────────────────────────────────────────────────────────────────────╯"
"│                            │╭Preview - Summary──────────────────────────╮╭Summary Details─Change Diff────────────────╮"
"│                            ││Same      pulumi:pulumi:Stack            de││info: No change selected                   │"
"│                            ││Create    local:index/file:File          ne││                                           │"
"│                            ││Import    random:index/randomString:RandomS││                                           │"
"│                            ││Read      pulumi:pulumi:StackReference   cu││                                           │"
"│                            ││Replace   random:index/randomString:RandomS││                                           │"
"│                            ││Replace   local:index/file:File          it││                                           │"
"│                            ││Replace   random:index/randomPassword:Rando││                                           │"
"│                            ││Replace   local:index/file:File          se││                                           │"
"│                            ││Update    command:local:Command          sl││                                           │"
"│                            ││Replace   local:index/file:File          fi││                                           │"
"│                            ││Delete    local:index/file:File          di││                                           │"
"│                            ││Delete    local:index/file:File          de││                                           │"
"│                            ││Discard   pulumi:pulumi:StackReference   re││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"╰────────────────────────────╯│                                           ││                                           │"
"╭Stacks──────────────────────╮│                                           ││                                           │"
"│test-stack                  ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            │╰───────────────────────────────────────────╯╰───────────────────────────────────────────╯"
"╰────────────────────────────╯                                                                                          "
