src/snapshots/p5__layout__tests__layout_summary_details_with_selection.snap
---
source: src/layout.rs
expression: terminal.backend()
---
"╭Workspaces──────────────────╮╭No Workspace Loaded─────────────────────────────────────────────────────────────────────╮"
"│test-workspace              ││Stack: test-stack                                                                       │"
"│                            │╰────────────────────────────────────────────────────────────────────────────────────────╯"
"│                            │╭Preview - Summary──────────────────────────╮╭Summary Details─Change Diff────────────────╮"
"│                            ││Same      pulumi:pulumi:Stack            de││Operation: Create                          │"
"│                            ││Create    local:index/file:File          ne││URN: urn:pulumi:base-reference::debug::loca│"
"│                            ││Import    random:index/randomString:RandomS││Type: Other("local:index/file:File")       │"
"│                            ││Read      pulumi:pulumi:StackReference   cu││: ── New Resource ──                       │"
"│                            ││Replace   random:index/randomString:RandomS││  content: "new"                           │"
"│                            ││Replace   local:index/file:File          it││  filename: "./files/base-reference/new.txt│"
"│                            ││Replace   random:index/randomPassword:Rando││                                           │"
"│                            ││Replace   local:index/file:File          se││                                           │"
"│                            ││Update    command:local:Command          sl││                                           │"
"│                            ││Replace   local:index/file:File          fi││                                           │"
"│                            ││Delete    local:index/file:File          di││                                           │"
"│                            ││Delete    local:index/file:File          de││                                           │"
"│                            ││Discard   pulumi:pulumi:StackReference   re││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"╰────────────────────────────╯│                                           ││                                           │"
"╭Stacks──────────────────────╮│                                           ││                                           │"
"│test-stack                  ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            ││                                           ││                                           │"
"│                            │╰───────────────────────────────────────────╯╰───────────────────────────────────────────╯"
"╰────────────────────────────╯                                                                                          "
